--- a/src/FreshRcu/Shared/NavMenu.razor
+++ b/src/FreshRcu/Shared/NavMenu.razor
@@ -11,7 +11,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Overview
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="inverter-time" Match="NavLinkMatch.All">
+                <span class="oi oi-flash" aria-hidden="true"></span> Inverter Time
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="logs" Match="NavLinkMatch.All">
+                <span class="oi oi-book" aria-hidden="true"></span> Logs
             </NavLink>
         </div>
     </nav>
